--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
                   <h5>2023&nbsp;&ndash;&nbsp;now</h5>
                   <!-- Use the list below to talk about minors, exchanges, extra-curricular activities. -->
                   <ul class="biography-details list-unstyled">
+                    <li>Audio Visual Department</li>
                   </ul>
                 </div>
               </li>
@@ -175,7 +176,7 @@
                 </a>
               </li>
               <li class="contact-item">
-                <a class="d-flex align-items-center" href="https://facebook.com/" target="_blank">
+                <a class="d-flex align-items-center" href="https://www.instagram.com/tessvdalsen" target="_blank">
                   <img class="contact-icon" src="images/icons/facebook.svg" alt="Facebook">
                   Instagram Profile
                 </a>
