--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
               </li>
               <li class="contact-item">
                 <a class="d-flex align-items-center" href="https://www.instagram.com/tessvdalsen" target="_blank">
-                  <img class="contact-icon" src="images/icons/facebook.svg" alt="Facebook">
+                  <img class="contact-icon" src="images/icons/instagram.svg" alt="Facebook">
                   Instagram Profile
                 </a>
               </li>
