--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
                   <h4>High School Diploma, City High School</h4>
-                  <h5>2018</h5>
+                  <h5>2023</h5>
                   <ul class="biography-details list-unstyled">
                     <li>Audiovisual media specialization</li>
                   </ul>
@@ -216,8 +216,8 @@
                 <h5 class="language-name w-50">Spanish</h5>
                 <div class="language-level w-50 border border-info border-2 position-relative">
                   <!-- The div below is a progress bar. Choose between w-25, w-50, w-75 and w-100 to show your level of fluency -->
-                  <div class="language-progress position-absolute bg-warning h-100 w-50"></div>
-                  <h6 class="position-absolute w-100 text-center top-0 py-1">Advanced</h6>
+                  <div class="language-progress position-absolute bg-warning h-100 w-30"></div>
+                  <h6 class="position-absolute w-100 text-center top-0 py-1">beginner</h6>
                 </div>
               </li>
             </ul>
