--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                   <img class="biography-logo mw-100 d-block mx-auto" src="images/schools/school.svg" alt="School logo" width="80">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
-                  <h4>High School Diploma, HPC Zetten</h4>
+                  <h4>High School, HPC Zetten</h4>
                   <h5>2023</h5>
                   <ul class="biography-details list-unstyled">
                     <li>Havo, N&T</li>
