--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
               <li class="contact-item">
                 <a class="d-flex align-items-center" href="https://www.instagram.com/tessvdalsen" target="_blank">
                   <img class="contact-icon" src="images/icons/instagram.svg" alt="Facebook">
-                  Instagram Profile
+                  @tessvdalsen
                 </a>
               </li>
               <li class="contact-item">
