--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         -->
         <div class="col-12 col-sm-8 col-md-9 col-lg-10 my-3 header-content">
           <h1 class="fw-bolder">Tess van Dalsen</h1>
-          <h5 class="fst-italic tagline">&nbsp;Creative busines student</h5>
+          <h5 class="fst-italic tagline">&nbsp;Creative business student</h5>
         </div>
       </header>
 
@@ -127,7 +127,7 @@
                   <h5>2023&nbsp;&ndash;&nbsp;now</h5>
                   <!-- Use the list below to talk about minors, exchanges, extra-curricular activities. -->
                   <ul class="biography-details list-unstyled">
-                    <li>Audio Visual Department</li>
+                    <li>Audio Visual department</li>
                   </ul>
                 </div>
               </li>
@@ -182,9 +182,15 @@
                 </a>
               </li>
               <li class="contact-item">
-                <a class="d-flex align-items-center" href="https://www.tiktok.com/@bredauniversityas" target="_blank">
-                  <img class="contact-icon" src="images/icons/tiktok.svg" alt="Mobile Phone">
-                  TikTok @bredauniversityas
+                <a class="d-flex align-items-center" href="https://www.linkedin.com/in/tess-van-dalsen-753a05291/" target="_blank">
+                  <img class="contact-icon" src="images/icons/linkedin.svg" alt="Mobile Phone">
+                  LinkedIn
+                </a>
+              </li>
+              <li class="contact-item">
+                <a class="d-flex align-items-center" target="_blank">
+                  <img class="contact-icon" src="images/icons/phone.svg" alt="Mobile Phone">
+                  06-57259968
                 </a>
               </li>
             </ul>
