--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
                   <h4>Supermarket Employee, Coop Herveld</h4>
-                  <h5>2019-2023</h5>
+                  <h5>2020-2023</h5>
                   <!-- This entry doesn't have a list of achievements, but you can copy-paste the one from above -->
                 </div>
               </li>
@@ -184,7 +184,7 @@
               <li class="contact-item">
                 <a class="d-flex align-items-center" href="https://www.linkedin.com/in/tess-van-dalsen-753a05291/" target="_blank">
                   <img class="contact-icon" src="images/icons/linkedin.svg" alt="Mobile Phone">
-                  LinkedIn
+                  @Tessvandalsen
                 </a>
               </li>
               <li class="contact-item">
