--- a/index.html
+++ b/index.html
@@ -105,6 +105,9 @@
                   <h4>Supermarket Employee, Coop Herveld</h4>
                   <h5>2020-2023</h5>
                   <!-- This entry doesn't have a list of achievements, but you can copy-paste the one from above -->
+                  <ul class="biography-details list-unstyled">
+                    <li>Cashier</li>
+                  </ul>
                 </div>
               </li>
 
