--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                   <img class="biography-logo mw-100 d-block mx-auto" src="images/employers/projector.svg" alt="Company logo" width="80">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
-                  <h4>Production Assistant</h4>
+                  <h4>Producer/editor</h4>
                   <h5>April&ndash;July 2019</h5>
                   <!-- Use the list below to talk about your achievements -->
                   <ul class="biography-details list-unstyled">
@@ -142,7 +142,7 @@
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
                   <h4>High School, HPC Zetten</h4>
-                  <h5>2023</h5>
+                  <h5>2017-2023</h5>
                   <ul class="biography-details list-unstyled">
                     <li>Havo, N&T</li>
                   </ul>
