--- a/index.html
+++ b/index.html
@@ -84,13 +84,13 @@
                   <img class="biography-logo mw-100 d-block mx-auto" src="images/employers/projector.svg" alt="Company logo" width="80">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
-                  <h4>Producer/editor</h4>
-                  <h5>April&ndash;July 2019</h5>
+                  <h4>Producer/Editor</h4>
+                  <h5>Projects</h5>
                   <!-- Use the list below to talk about your achievements -->
                   <ul class="biography-details list-unstyled">
-                    <li>Coordinated shootings in studio and on location</li>
-                    <li>Liaised with local authorities and with suppliers</li>
-                    <li>Part of my studies at Breda University of Applied Sciences</li>
+                    <li>Short film - Growing Beyond</li>
+                    <li>Promotion video - MOOIWERK</li>
+                    <li>Promotion video - Filmhuis Breda</li>
                   </ul>
                 </div>
               </li>
