--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                   <h5>2020-2023</h5>
                   <!-- This entry doesn't have a list of achievements, but you can copy-paste the one from above -->
                   <ul class="biography-details list-unstyled">
-                    <li>Cashier</li>
+                    <li>Retail cashier</li>
                   </ul>
                 </div>
               </li>
