--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         -->
         <div class="col-12 col-sm-8 col-md-9 col-lg-10 my-3 header-content">
           <h1 class="fw-bolder">Tess van Dalsen</h1>
-          <h5 class="fst-italic tagline">&nbsp;Creative business student</h5>
+          <h5 class="fst-italic tagline">&nbsp;2nd year Creative Business student</h5>
         </div>
       </header>
 
