--- a/index.html
+++ b/index.html
@@ -247,8 +247,8 @@
           <section class="my-3 aside-section">
             <h2>Interests &amp; Hobbies</h2>
             <ul class="skill-list list-unstyled">
-              <li class="skill-item">Formula 1 Driver</li>
-              <li class="skill-item">Netflix Binge-Watcher</li>
+              <li class="skill-item">Movie enjoyer</li>
+              <li class="skill-item">Formula 1</li>
             </ul>
           </section>
 
