--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Links to our additional CSS styles -->
     <link rel="stylesheet" href="css/styles.css">
 
-    <title>Firstname Lastname's Resumé</title>
+    <title>Tess van Dalsen's Resumé</title>
   </head>
   <!-- End of the head -->
 
@@ -50,7 +50,7 @@
         -->
         <div class="col-12 col-sm-8 col-md-9 col-lg-10 my-3 header-content">
           <h1 class="custom-heading">Tess van Dalsen</h1>
-          <h5 class="custom-heading">&nbsp;2nd year Creative Business student</h5>
+          <h5 class="custom-heading">&nbsp;2nd year Creative Business Student</h5>
         </div>
       </header>
 
@@ -69,7 +69,7 @@
           <!--
             <section> is yet another semantic element. The first one is for professional experience.
           -->
-          <section class="my-3 biography-section">
+          <section class="cus">
             <h2>Experience</h2>
             <!--
               Each list item (li) in the unordered list (ul) below will be one job.
@@ -226,7 +226,7 @@
                 <div class="language-level w-50 border border-info border-2 position-relative">
                   <!-- The div below is a progress bar. Choose between w-25, w-50, w-75 and w-100 to show your level of fluency -->
                   <div class="language-progress position-absolute bg-warning h-100 w-25"></div>
-                  <h6 class="position-absolute w-100 text-center top-0 py-1">beginner</h6>
+                  <h6 class="position-absolute w-100 text-center top-0 py-1">Beginner</h6>
                 </div>
               </li>
             </ul>
@@ -248,7 +248,7 @@
             <h2>Interests &amp; Hobbies</h2>
             <ul class="skill-list list-unstyled">
               <li class="skill-item">Movie enjoyer</li>
-              <li class="skill-item">Formula 1</li>
+              <li class="skill-item">Formula</li>
             </ul>
           </section>
 
