--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
             <h2>Interests &amp; Hobbies</h2>
             <ul class="skill-list list-unstyled">
               <li class="skill-item">Movie enjoyer</li>
-              <li class="skill-item">Formula</li>
+              <li class="skill-item">Formula 1</li>
             </ul>
           </section>
 
