--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                 </a>
               </li>
               <li class="contact-item">
-                <a class="d-flex align-items-center" target="_blank">
+                <a class="d-flex align-items-center" href="" target="_blank">
                   <img class="contact-icon" src="images/icons/phone.svg" alt="Mobile Phone">
                   06-57259968
                 </a>
